syntax = "proto3";

option go_package="/pb";

message User {
  int64 id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string username = 5;
  string password = 6;
}

message GetByUserNameAndPasswordRequest {
  string username = 1;
  string password = 2;
}

message GetByUserNameAndPasswordResponse {User user = 1;}


message GetAllUsersRequest {}
message GetAllUsersResponse { repeated User users = 1;}

message GetUserByIdRequest {int64 id = 1;}
message GetUserByIdResponse {User user = 1;}


message CreateUserRequest { 
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string username = 5;
  string password = 6;}
message CreateUserResponse {User user = 1;}

message UpdateUserRequest { 
  int64 id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string username = 5;
  string password = 6;
}
message UpdateUserResponse {User user = 1;}


message DeleteUserRequest {int64 id = 1;}
message DeleteUserResponse {}


service UserService{
  rpc  GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse){}
  rpc  GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse){}
  rpc  CreateUser(CreateUserRequest) returns (CreateUserResponse){}
  rpc  UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){}
  rpc  DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){}
  rpc GetByUserNameAndPassword(GetByUserNameAndPasswordRequest) returns (GetByUserNameAndPasswordResponse) {}
}